--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,23 +8,32 @@
   <meta name="keywords" content="ghost gear garage, wraps, exhaust, car parts, spooky gothic custom cars">
   <title>Home • Ghost Gear Garage</title>
   <link rel="stylesheet" href="gothic_css.css">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-BZKYS2PMHS');
+  </script>
 </head>
+
 <body>
 
-    <header>
-      <div class="wrap">
-        <a class="brand" href="index.html">
-          <img class="logo" src="images/skull.jpg" alt="Ghost Gear Garage skull logo">
-          <span>Ghost Gear Garage</span>
-        </a>
-        <nav aria-label="Primary">
-          <a href="index.html">Home</a>
-          <a href="services.html">Services</a>
-          <a href="shop.html">Shop</a>
-          <a href="blog.html">Blog</a>
-        </nav>
-      </div>
-    </header>
+  <header>
+    <div class="wrap">
+      <a class="brand" href="index.html">
+        <img class="logo" src="images/skull.jpg" alt="Ghost Gear Garage skull logo">
+        <span>Ghost Gear Garage</span>
+      </a>
+      <nav aria-label="Primary">
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="shop.html">Shop</a>
+        <a href="blog.html">Blog</a>
+      </nav>
+    </div>
+  </header>
 
   <main>
     <section class="hero">
@@ -63,10 +73,12 @@
     </section>
   </main>
 
-    <footer>
-      <small>© <span id="y"></span> Ghost Gear Garage • <a href="https://www.asu.edu" target="_blank" rel="noopener">External Link</a>
+  <footer>
+    <small>© <span id="y"></span> Ghost Gear Garage • <a href="https://www.asu.edu" target="_blank"
+        rel="noopener">External Link</a>
       <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
-    </footer>
+  </footer>
 
 </body>
+
 </html>
